--- a/app/static/css/recommender.css
+++ b/app/static/css/recommender.css
@@ -1,12 +1,13 @@
-.R1{width: 100%;height:45%;background-color:#01FF70;display: flex;
+.R1{width: 100%;height:45%;background-color:#b89dce;display: flex;
     justify-content: center;align-items: center;position: relative;}
 .R1 h1{font-size: 8vw;font-family: 'Times New Roman', Times, serif;position:relative;color:#000000;font-weight: bold;}
 
 .R21 label{font-size: 23px;font-family: 'Times New Roman', Times, serif;padding-top:100px;}
 .R21 input{background-color:transparent;border:2px solid black;width:100%;max-width: 300px;}
-.R3{background-color:#06ff82;display:flex;flex-direction:column;min-height:500px;}
+.R2 h1{font-size:5vw;font-family: 'Times New Roman', Times, serif;}
+.R3{background-color:#b89dce;display:flex;flex-direction:column;min-height:500px;}
 .R3 h3{font-size: 30px;font-family: 'Times New Roman', Times, serif;font-weight: bold;}
-.R4{background-color:#06ff82;min-height:300px;}
+.R4{background-color:#b89dce;min-height:350px;}
 .card h6{font-family: 'Times New Roman', Times, serif;text-align: center;font-weight: bold}
 .card p{color:rgb(0, 0, 0);font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
 .R3 .card .card-header{background-color:#01FF70}
