--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -17,7 +17,7 @@
             <p>Hi, To continue please provide us with your stream and detailed feedback about your stream</p>
         </div>
         <div class="container">
-            <form action="{{ url_for('explore') }}" method="post">
+            <form action="{{ url_for('explore') }}" method="post" class="was-validated">
                 {{ form.hidden_tag() }}
                 <div class="content2"> 
                     <div class="container text-center">
@@ -47,28 +47,22 @@
                         <div class="card-body">
                             <div class="form-check">
                                 <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q1" id="option1" value="Yes, I have/had properly decided my choice of subject stream" checked>Yes, I have/had properly decided my choice of subject stream.
+                                    <input type="radio" class="form-check-input" name="q1" id="option1" value="0" checked>Yes, I have/had properly decided my choice of subject stream.
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q1" id="option2" value="No, I will be selecting/selected the subject stream suggested by my parents/guardians/teachers.">No, I will be selecting/selected the subject stream suggested by my parents/guardians/teachers.
+                                    <input type="radio" class="form-check-input" name="q1" id="option2" value="1">No, I will be selecting/selected the subject stream suggested by my parents/guardians/teachers.
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" for="option3">
-                                    <input type="radio" class="form-check-input" name="q1" id="option3" value="No, I may have/had to select a subject stream according to my marks">No, I may have/had to select a subject stream according to my marks.
+                                    <input type="radio" class="form-check-input" name="q1" id="option3" value="2">No, I may have/had to select a subject stream according to my marks.
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" >
-                                    <input type="radio" class="form-check-input" name="q1" id="options" value="No, I will be selecting/selected the subject stream opted by my friends">No, I will be selecting/selected the subject stream opted by my friends.
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label" >
-                                    <input type="radio" class="form-check-input" name="q1" id="options" value="Other">Other (please specify)<br> 
-                                    <input type="text" name="q11" value=""/> 
+                                    <input type="radio" class="form-check-input" name="q1" id="options" value="3">No, I will be selecting/selected the subject stream opted by my friends.
                                 </label>
                             </div>
                         </div>
@@ -82,23 +76,12 @@
                         <div class="card-body">
                             <div class="form-check">
                                 <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q2" id="option1" value="Yes, I was able to/will select the subject stream which I was/am good in." checked>Yes, I have/had properly decided my choice of subject stream.
+                                    <input type="radio" class="form-check-input" name="q2" id="option1" value="0" checked>Yes, I have/had properly decided my choice of subject stream.
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q2" id="option2" value="No, I chose/will choose a different subject stream.">No, I chose/will choose a different subject stream.
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label" for="option3">
-                                    <input type="radio" class="form-check-input" name="q2" id="option3" value="I may have to/had to change my school to select a stream of my choice.">I may have to/had to change my school to select a stream of my choice.
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label" >
-                                    <input type="radio" class="form-check-input" name="q2" id="options" value="Other">Other (please specify)<br> 
-                                    <input type="text" name="q22" value=""/> 
+                                    <input type="radio" class="form-check-input" name="q2" id="option2" value="1">No, I chose/will choose a different subject stream.
                                 </label>
                             </div>
                         </div>
@@ -111,19 +94,13 @@
                         </div>
                         <div class="card-body">
                             <div class="form-check">
-                                <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q3" id="option1" value="Yes, it would have been/would be helpful" checked>Yes, it would have been/would be helpful.
-                                </label>
-                            </div>
-                            <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q3" id="option2" value="No, I am/was fine with my choice of stream and have/had no second-thoughts.">No, I am/was fine with my choice of stream and have/had no second-thoughts.
+                                    <input type="radio" class="form-check-input" name="q3" id="option2" value="0" checked>No, I am/was fine with my choice of stream and have/had no second-thoughts.
                                 </label>
                             </div>
                             <div class="form-check">
-                                <label class="form-check-label" for="option3">
-                                    <input type="radio" class="form-check-input" name="q3" id="option3" value="Others">If any comments please mention in the box below.<br>
-                                    <input type="text" name="q33" value=""/> 
+                                <label class="form-check-label" for="option1">
+                                    <input type="radio" class="form-check-input" name="q3" id="option1" value="1" >Yes, it would have been/would be helpful.
                                 </label>
                             </div>
                         </div>
@@ -136,19 +113,13 @@
                         </div>
                         <div class="card-body">
                             <div class="form-check">
-                                <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q4" id="option1" value="Yes, they had/have complete influence on my decision of choosing a stream." checked>Yes, they had/have complete influence on my decision of choosing a stream.
-                                </label>
-                            </div>
-                            <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q4" id="option2" value="No, they will allow/allowed me to make my own choice.">No, they will allow/allowed me to make my own choice.
+                                    <input type="radio" class="form-check-input" name="q4" id="option2" value="0" checked>No, they will allow/allowed me to make my own choice.
                                 </label>
                             </div>
                             <div class="form-check">
-                                <label class="form-check-label" for="option3">
-                                    <input type="radio" class="form-check-input" name="q4" id="option3" value="Others">If any comments please mention in the box below.<br>
-                                    <input type="text" name="q44" value=""/> 
+                                <label class="form-check-label" for="option1">
+                                    <input type="radio" class="form-check-input" name="q4" id="option1" value="1" >Yes, they had/have complete influence on my decision of choosing a stream.
                                 </label>
                             </div>
                         </div>
@@ -162,18 +133,12 @@
                         <div class="card-body">
                             <div class="form-check">
                                 <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q5" id="option1" value="Yes" checked>Yes
+                                    <input type="radio" class="form-check-input" name="q5" id="option1" value="0" checked>Yes
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q5" id="option2" value="No">No
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label" for="option3">
-                                    <input type="radio" class="form-check-input" name="q5" id="option3" value="Others">Other (please specify)<br>
-                                    <input type="text" name="q55" value=""/> 
+                                    <input type="radio" class="form-check-input" name="q5" id="option2" value="1">No
                                 </label>
                             </div>
                         </div>
@@ -187,12 +152,12 @@
                         <div class="card-body">
                             <div class="form-check">
                                 <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q6" id="option1" value="Yes Why not?" checked>Yes
+                                    <input type="radio" class="form-check-input" name="q6" id="option1" value="0" checked>Yes
                                 </label>
                             </div>
                             <div class="form-check">
                                 <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q6" id="option2" value="No I'm good">No
+                                    <input type="radio" class="form-check-input" name="q6" id="option2" value="1">No
                                 </label>
                             </div>
                         </div>
@@ -205,14 +170,13 @@
                         </div>
                         <div class="card-body">
                             <div class="form-check">
-                                <label class="form-check-label" for="option1">
-                                    <input type="radio" class="form-check-input" name="q7" id="option1" value="No" checked>No
+                                <label class="form-check-label" for="option2">
+                                    <input type="radio" class="form-check-input" name="q7" id="option2" value="0" checked>Yes
                                 </label>
                             </div>
                             <div class="form-check">
-                                <label class="form-check-label" for="option2">
-                                    <input type="radio" class="form-check-input" name="q7" id="option2" value="Others">If Yes, please mention in the below box<br>
-                                    <input type="text" name="q77" value=""/> 
+                                <label class="form-check-label" for="option1">
+                                    <input type="radio" class="form-check-input" name="q7" id="option1" value="1" >No
                                 </label>
                             </div>
                         </div>
@@ -221,20 +185,24 @@
                 <div class="container A p-0">
                     <div class="card">
                         <div class="card-header">
-                    <h3>8.Was the stream tough for you?</h3> 
+                            <h3>8.Was the stream tough for you? Please elaborate</h3> 
                         </div>
                         <div class="card-body">
-                    <input type="text" name="q8" id="options" required>
+                            <div class="form-outline">
+                                <div class="form-outline">
+                                    <textarea class="form-control is-valid"  id="q8" name="q8" minlength="20" placeholder="Minimum 20 characters" required></textarea>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class="row text-center" id='fsubmit'>
                     <div class="col">
-                    {{  form.submit(id='fsubmit',class = 'btn btn-lg btn-dark mb-3')  }}
+                    {{  form.submit(class = 'btn btn-lg btn-dark mb-3')  }}
                     </div>
                 </div>
             </form>
-        </div>   
+        </div> 
     </div>
-    <script src="url_for('static',filename='js/explore.js')"></script>
+    <script src="{{ url_for('static',filename='js/explore.js') }}"></script>
 {% endblock %}
