--- a/app/static/css/explore.css
+++ b/app/static/css/explore.css
@@ -5,7 +5,7 @@
 .s1name{border: 2px solid #000000;border-radius: 5px;background-color: rgba(42, 98, 218, 0.151);color: rgb(0, 0, 0);}
 .s1feedback{border: 2px solid #00fff2;border-radius: 5px;width: 50%;height: 100%;max-width: 100%;background-color:rgba(89, 0, 255, 0.075);color: rgb(0, 0, 0)}
 .content1{padding-left: 20px;}
-.s1{position: relative;overflow: hidden; width: 100%;margin-bottom: 0%;height: 100%;background-color:rgb(255, 196, 0)}
+.s1{position: relative;overflow: hidden; width: 100%;margin-bottom: 0%;height: 100%;background-color:rgb(247, 213, 102)}
 #namelabel {vertical-align:middle ;color: rgb(0, 0, 0);font-size:25px;
     font-family: Georgia, 'Times New Roman', Times, serif;}
 #streamlabel {vertical-align:middle ;color: rgb(0, 0, 0);font-size:25px;
@@ -14,8 +14,6 @@
 .A h3{color:rgb(0, 0, 0);font-weight: bold;font-size: 22px;}
 .A label{font-size: 16px;}
 #options{margin-top: 10px;}
-.B label{font-family: Georgia, 'Times New Roman', Times, serif;
-font-weight: bold;font-size:20px
-}
+
 #fsubmit:hover{ transform: scale(1.1);}
-.xplore{background-color:#feb236;}
+.xplore{background-color:#CAFAFE;}
