--- a/app/templates/social.html
+++ b/app/templates/social.html
@@ -13,67 +13,80 @@
 <div class="R2">
     <form action="" method="post" id="myform">
         <div class="container text-center">
-            <h1 class="pb-3" style="font-size:5vw">Step 5</h1>
-            <h3 class="pb-3" >Social Data</h3>
+            <h1 class="pb-3">Step 5</h1>
+            <h3 class="pb-3" >Tell us more</h3>
         </div>
-        <div class="container">
+        <div class="container-fluid p-0">
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                    <p>1.What reason would you give for choosing your career path</p>
+                    </div>
+                    <div class="card-body">
+                        <input type="radio" name="sef" value="0" onclick="removeRequired();" checked>  Personal choice<br>
+                        <input type="radio" name="sef" value="1" onclick="removeRequired();">  Job security<br>
+                        <input type="radio" name="sef" value="2" onclick="removeRequired();">  Family status<br>
+                        <input type="radio" name="sef" value="3" onclick="setRequired();" id="other"> Other  
+                        <input type="text" name="sef1" id="inputother" onclick="changeradioother()">
+                    </div>
+                </div>
             <div>
-                <label for="satisfaction" class="form-label">1.On scale from 0 to 100 how satisfied are you with your progress</label><br>
-                <input type="range" name="satisfaction" min="0" max="100" onchange="updateTextInput(this.value);">
-                <input type="text" id="textInput" value="50" style="width:50px">
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <p>2.Do you like to work as a team or go solo?</p>
+                    </div>
+                    <div class="card-body">    
+                        <input type="radio" name="teamwork" value="0" checked/> TEAM <input type="radio" name="teamwork" value="1"/> SOLO  
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>2.Socio Economic factors</p>
-                <input type="radio" name="sef" value="0" onclick="removeRequired();" checked>  Personal choice<br>
-                <input type="radio" name="sef" value="1" onclick="removeRequired();">  Job security<br>
-                <input type="radio" name="sef" value="2" onclick="removeRequired();">  Family status<br>
-                <input type="radio" name="sef" value="3" onclick="setRequired();" id="other"> Other  
-                <input type="text" name="sef1" id="inputother" onclick="changeradioother()">
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <p>3.Do you have a competitive mindset?</p>
+                    </div>
+                    <div class="card-body">
+                        <input type="radio" name="competitive" value="0" checked/> YES <input type="radio" name="competitive" value="1"/> NO  
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>3.Do you like to work as a team or go solo?</p>
-                <input type="radio" name="teamwork" value="0" checked/> TEAM <input type="radio" name="teamwork" value="1"/> SOLO  
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <p>4.Do you have leadership qualities</p>
+                    </div>
+                    <div class="card-body">
+                        <input type="radio" name="leadership" value="0" checked/> YES <input type="radio" name="leadership" value="1"/> NO  
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>4.Do you have a competitive mindset?</p>
-                <input type="radio" name="competitive" value="0" checked/> YES <input type="radio" name="competitive" value="1"/> NO  
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <p>5.Do you think you could have a work-life balance</p>
+                    </div>
+                    <div class="card-body">
+                        <input type="radio" name="worklife" value="0" checked/> YES <input type="radio" name="worklife" value="1"/> NO  
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>5.Do you have leadership qualities</p>
-                <input type="radio" name="leadership" value="0" checked/> YES <input type="radio" name="leadership" value="1"/> NO  
+            <div class="container p-0">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <p>6.Do you have an excellent self learning capability</p>
+                    </div>   
+                    <div class="card-body">
+                        <input type="radio" name="selflearn" value="0" checked/> YES <input type="radio" name="selflearn" value="1"/> NO  
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>6.Do you think you could have a work-life balance</p>
-                <input type="radio" name="worklife" value="0" checked/> YES <input type="radio" name="worklife" value="1"/> NO  
-            </div>
-            <div>
-                <p>7.Have you received any certifications</p>
-                <input type="radio" name="certif" value="0" checked/> YES <input type="radio" name="certif" value="1"/> NO  
-            </div>
-            <div>
-                <p>8.Do you have an excellent self learning capability</p>
-                <input type="radio" name="selflearn" value="0" checked/> YES <input type="radio" name="selflearn" value="1"/> NO  
-            </div>
+            <div class="text-center">
+                <div class="my-5 text-center">
+                    <button type="submit" class="btn btn-danger btn-lg loading buttonload" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing...">Submit</button>
+                </div>
+            </div> 
         </div>
-        <div class="text-center">
-            <div class="form-group R21">    
-                <label for="ins">What was your most interesting subject?</label><br />
-                <input type="text" name="ins" id="ins" placeholder="Enter here.." required><br>
-            </div>
-            <div class="container">
-                <label for="inf">Choose a field you find interesting</label><br />
-                <select class="btn btn-warning" id="inf" name="inf" >
-                    <option>Business</option>
-                    <option>Designing</option>
-                    <option>Finance</option>
-                    <option>Marketing</option>
-                    <option>Technical</option>
-                </select>
-            </div>
-            <div class="my-5 text-center">
-                <button type="submit" class="btn btn-danger btn-lg loading buttonload" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing...">Submit</button>
-            </div>
-        </div> 
     </form>
 </div>
 <script src={{url_for('static',filename='js/skill.js')}}></script>
